force-app/main/default/objects/Inquiry_hz__c/Inquiry_hz__c.object-meta.xml
<CustomObject>
    <label>Request</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Inquiry ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>