force-app/main/default/objects/Inquiry_hz__c/fields/AcreMax__c.field-meta.xml
<CustomField>
    <fullName>AcreMax__c</fullName>
    <label>Acre Max</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>