force-app/main/default/objects/Inquiry_hz__c/fields/AcreMin__c.field-meta.xml
<CustomField>
    <fullName>AcreMin__c</fullName>
    <label>Acre Min</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>