force-app/main/default/objects/Inquiry_hz__c/fields/AdditionalCities__c.field-meta.xml
<CustomField>
    <fullName>AdditionalCities__c</fullName>
    <label>Additional Cities</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>