force-app/main/default/objects/Inquiry_hz__c/fields/AdditionalPostalCodes__c.field-meta.xml
<CustomField>
    <fullName>AdditionalPostalCodes__c</fullName>
    <label>Additional Postal Codes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>