force-app/main/default/objects/Inquiry_hz__c/fields/Address_hz__c.field-meta.xml
<CustomField>
    <fullName>Address_hz__c</fullName>
    <label>Property Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>