force-app/main/default/objects/Inquiry_hz__c/fields/AdultCommunity__c.field-meta.xml
<CustomField>
    <fullName>AdultCommunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adult Community</label>
    <type>Checkbox</type>
</CustomField>