force-app/main/default/objects/Inquiry_hz__c/fields/After_90_Minutes_Of_CreatedDate__c.field-meta.xml
<CustomField>
    <fullName>After_90_Minutes_Of_CreatedDate__c</fullName>
    <formula>CreatedDate + (3/48)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After 90 Minutes Of CreatedDate</label>
    <type>DateTime</type>
</CustomField>