force-app/main/default/objects/Inquiry_hz__c/fields/AgentFirstName__c.field-meta.xml
<CustomField>
    <fullName>AgentFirstName__c</fullName>
    <label>Listing Agent First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>