force-app/main/default/objects/Inquiry_hz__c/fields/AgentLastName__c.field-meta.xml
<CustomField>
    <fullName>AgentLastName__c</fullName>
    <label>Listing Agent Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>