force-app/main/default/objects/Inquiry_hz__c/fields/Area__c.field-meta.xml
<CustomField>
    <fullName>Area__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Al Badaa</fullName>
            </value>
            <value>
                <fullName>Al Khan</fullName>
            </value>
            <value>
                <fullName>Al Majaz</fullName>
            </value>
            <value>
                <fullName>Al Mamzar- Sharjah</fullName>
            </value>
            <value>
                <fullName>Al Mina</fullName>
            </value>
            <value>
                <fullName>Al Nahda- Sharjah</fullName>
            </value>
            <value>
                <fullName>Al Safa</fullName>
            </value>
            <value>
                <fullName>Al Taawun</fullName>
            </value>
            <value>
                <fullName>Business Bay</fullName>
            </value>
            <value>
                <fullName>City Walk</fullName>
            </value>
            <value>
                <fullName>Corniche Al Buhaira</fullName>
            </value>
            <value>
                <fullName>Downtown</fullName>
            </value>
            <value>
                <fullName>Dubai Marina</fullName>
            </value>
            <value>
                <fullName>Dubai Production City (IMPZ)</fullName>
            </value>
            <value>
                <fullName>Dubai Silicon Oasis</fullName>
            </value>
            <value>
                <fullName>Jumeirah Beach Residence</fullName>
            </value>
            <value>
                <fullName>Jumeriah 1</fullName>
            </value>
            <value>
                <fullName>Jumeriah 2</fullName>
            </value>
            <value>
                <fullName>Jumeriah 3</fullName>
            </value>
            <value>
                <fullName>Old Town</fullName>
            </value>
            <value>
                <fullName>Palm Jumeriah</fullName>
            </value>
            <value>
                <fullName>Sports City</fullName>
            </value>
            <value>
                <fullName>Umm Suqeim</fullName>
            </value>
            <value>
                <fullName>Umm Suqueim 2</fullName>
            </value>
            <value>
                <fullName>Umm Suqueim 3</fullName>
            </value>
            <value>
                <fullName>Al Nouf 4</fullName>
            </value>
            <value>
                <fullName>Al Darari</fullName>
            </value>
            <value>
                <fullName>Al Rahmaniya 5</fullName>
            </value>
            <value>
                <fullName>Sharqan</fullName>
            </value>
            <value>
                <fullName>Al Fayha</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>