force-app/main/default/objects/Inquiry_hz__c/fields/Area_hz__c.field-meta.xml
<CustomField>
    <fullName>Area_hz__c</fullName>
    <label>Area</label>
    <length>255</length>
    <type>Text</type>
</CustomField>