force-app/main/default/objects/Inquiry_hz__c/fields/BankOwned__c.field-meta.xml
<CustomField>
    <fullName>BankOwned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bank Owned</label>
    <type>Checkbox</type>
</CustomField>