force-app/main/default/objects/Inquiry_hz__c/fields/Basement_hz__c.field-meta.xml
<CustomField>
    <fullName>Basement_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Basement</label>
    <type>Checkbox</type>
</CustomField>