force-app/main/default/objects/Inquiry_hz__c/fields/BasementType__c.field-meta.xml
<CustomField>
    <fullName>BasementType__c</fullName>
    <label>Basement Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>