force-app/main/default/objects/Inquiry_hz__c/fields/Bathroom_US_min__c.field-meta.xml
<CustomField>
    <fullName>Bathroom_US_min__c</fullName>
    <label>Bathroom - min</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>