force-app/main/default/objects/Inquiry_hz__c/fields/Bathrooms_US_max__c.field-meta.xml
<CustomField>
    <fullName>Bathrooms_US_max__c</fullName>
    <label>Bathrooms Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>