force-app/main/default/objects/Inquiry_hz__c/fields/Beachfront__c.field-meta.xml
<CustomField>
    <fullName>Beachfront__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Beachfront</label>
    <type>Checkbox</type>
</CustomField>