force-app/main/default/objects/Inquiry_hz__c/fields/Bedrooms_hz_min__c.field-meta.xml
<CustomField>
    <fullName>Bedrooms_hz_min__c</fullName>
    <label>Bedrooms - min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>