force-app/main/default/objects/Inquiry_hz__c/fields/BodyOfWater__c.field-meta.xml
<CustomField>
    <fullName>BodyOfWater__c</fullName>
    <label>Body of Water</label>
    <length>255</length>
    <type>Text</type>
</CustomField>