force-app/main/default/objects/Inquiry_hz__c/fields/Building_Dubizzle__c.field-meta.xml
<CustomField>
    <fullName>Building_Dubizzle__c</fullName>
    <label>Building - Dubizzle</label>
    <length>255</length>
    <type>Text</type>
</CustomField>