force-app/main/default/objects/Inquiry_hz__c/fields/BuildingAndDevelopments__c.field-meta.xml
<CustomField>
    <fullName>BuildingAndDevelopments__c</fullName>
    <label>Buildings and Developments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>