force-app/main/default/objects/Inquiry_hz__c/fields/BuyingTimeFrame_hz__c.field-meta.xml
<CustomField>
    <fullName>BuyingTimeFrame_hz__c</fullName>
    <label>Buying Time Frame</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>asap</fullName>
                <label>ASAP</label>
            </value>
            <value>
                <fullName>1-3_months</fullName>
                <label>1-3 Months</label>
            </value>
            <value>
                <fullName>3-6_months</fullName>
                <label>3-6 Months</label>
            </value>
            <value>
                <fullName>6-12_months</fullName>
                <label>6-12 Months</label>
            </value>
            <value>
                <fullName>not_sure</fullName>
                <label>Not Sure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>