force-app/main/default/objects/Inquiry_hz__c/fields/City_hz__c.field-meta.xml
<CustomField>
    <fullName>City_hz__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>