force-app/main/default/objects/Inquiry_hz__c/fields/Community_Propertyfinder__c.field-meta.xml
<CustomField>
    <fullName>Community_Propertyfinder__c</fullName>
    <label>Community - Propertyfinder</label>
    <length>255</length>
    <type>Text</type>
</CustomField>