force-app/main/default/objects/Inquiry_hz__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <formula>IF(  Contact__r.SystemIsIndividual__c , &apos;n/a&apos; ,  HYPERLINK(&quot;/&quot; &amp;  Account__c ,  Account__r.Name  )  )</formula>
    <label>Company</label>
    <type>Text</type>
</CustomField>