force-app/main/default/objects/Inquiry_hz__c/fields/Construction_hz__c.field-meta.xml
<CustomField>
    <fullName>Construction_hz__c</fullName>
    <label>Construction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>