force-app/main/default/objects/Inquiry_hz__c/fields/Contact_FirstName__c.field-meta.xml
<CustomField>
    <fullName>Contact_FirstName__c</fullName>
    <formula>Contact__r.FirstName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact FirstName</label>
    <type>Text</type>
</CustomField>