force-app/main/default/objects/Inquiry_hz__c/fields/ContactEmailForSearch__c.field-meta.xml
<CustomField>
    <fullName>ContactEmailForSearch__c</fullName>
    <label>ContactEmailForSearch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>