force-app/main/default/objects/Inquiry_hz__c/fields/ContactMobileForSearch__c.field-meta.xml
<CustomField>
    <fullName>ContactMobileForSearch__c</fullName>
    <label>ContactMobileForSearch</label>
    <length>50</length>
    <type>Text</type>
</CustomField>