force-app/main/default/objects/Inquiry_hz__c/fields/ContactNameForSearch__c.field-meta.xml
<CustomField>
    <fullName>ContactNameForSearch__c</fullName>
    <label>ContactNameForSearch</label>
    <length>80</length>
    <type>Text</type>
</CustomField>