force-app/main/default/objects/Inquiry_hz__c/fields/CoolingType__c.field-meta.xml
<CustomField>
    <fullName>CoolingType__c</fullName>
    <label>Cooling Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>