force-app/main/default/objects/Inquiry_hz__c/fields/Counties__c.field-meta.xml
<CustomField>
    <fullName>Counties__c</fullName>
    <label>Counties</label>
    <length>255</length>
    <type>Text</type>
</CustomField>