force-app/main/default/objects/Inquiry_hz__c/fields/CreatedDate_5_min__c.field-meta.xml
<CustomField>
    <fullName>CreatedDate_5_min__c</fullName>
    <formula>CreatedDate + (5/1444)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CreatedDate 5 min</label>
    <type>DateTime</type>
</CustomField>