force-app/main/default/objects/Inquiry_hz__c/fields/Current_Position__c.field-meta.xml
<CustomField>
    <fullName>Current_Position__c</fullName>
    <label>Current Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Property to Sell - Not On Market</fullName>
            </value>
            <value>
                <fullName>Property to Sell - On The Market</fullName>
            </value>
            <value>
                <fullName>Property to Sell - On The Market US</fullName>
            </value>
            <value>
                <fullName>Property to Sell - Under Offer</fullName>
            </value>
            <value>
                <fullName>Property to Sell - Under Offer US</fullName>
            </value>
            <value>
                <fullName>Nothing to Sell</fullName>
            </value>
            <value>
                <fullName>First Time Buyer</fullName>
            </value>
            <value>
                <fullName>Renting</fullName>
            </value>
            <value>
                <fullName>Living with Parents</fullName>
            </value>
            <value>
                <fullName>Investor</fullName>
            </value>
            <value>
                <fullName>Cash Buyer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>