force-app/main/default/objects/Inquiry_hz__c/fields/DaysOnMarketMax__c.field-meta.xml
<CustomField>
    <fullName>DaysOnMarketMax__c</fullName>
    <label>Days On Market Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>