force-app/main/default/objects/Inquiry_hz__c/fields/DaysOnMarketMin__c.field-meta.xml
<CustomField>
    <fullName>DaysOnMarketMin__c</fullName>
    <label>Days On Market Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>