force-app/main/default/objects/Inquiry_hz__c/fields/Description_hz__c.field-meta.xml
<CustomField>
    <fullName>Description_hz__c</fullName>
    <label>Saved Search Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>