force-app/main/default/objects/Inquiry_hz__c/fields/DevelopmentName__c.field-meta.xml
<CustomField>
    <fullName>DevelopmentName__c</fullName>
    <label>Development Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>