force-app/main/default/objects/Inquiry_hz__c/fields/Dock_hz__c.field-meta.xml
<CustomField>
    <fullName>Dock_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dock</label>
    <type>Checkbox</type>
</CustomField>