force-app/main/default/objects/Inquiry_hz__c/fields/Email_between_8AM_and_8PM__c.field-meta.xml
<CustomField>
    <fullName>Email_between_8AM_and_8PM__c</fullName>
    <description>24 hours after new Inquiry (but not between 8pm and 8am).</description>
    <formula>if(HOUR(TIMEVALUE(CreatedDate)) &lt; 8 , DATETIMEVALUE(CreatedDate + 24/24 + (8 - HOUR(TIMEVALUE(CreatedDate)))/24),
if(HOUR(TIMEVALUE(CreatedDate)) &gt; 20 , DATETIMEVALUE(CreatedDate + 24/24 +(8 + 24 - HOUR(TIMEVALUE(CreatedDate)))/24),
DATETIMEVALUE(CreatedDate + 24/24)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email between 8AM and 8PM</label>
    <type>DateTime</type>
</CustomField>