force-app/main/default/objects/Inquiry_hz__c/fields/EmailFrequency__c.field-meta.xml
<CustomField>
    <fullName>EmailFrequency__c</fullName>
    <label>Email Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>immediate</fullName>
                <label>Immediately</label>
            </value>
            <value>
                <fullName>daily</fullName>
                <label>Daily</label>
            </value>
            <value>
                <fullName>weekly</fullName>
                <label>Weekly</label>
            </value>
            <value>
                <fullName>monthly</fullName>
                <label>Monthly</label>
            </value>
            <value>
                <fullName>never</fullName>
                <label>Never</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>