force-app/main/default/objects/Inquiry_hz__c/fields/Enquiry_Source_hz__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Source_hz__c</fullName>
    <label>Enquiry Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Inspection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>