force-app/main/default/objects/Inquiry_hz__c/fields/EppraisalValuation_hz__c.field-meta.xml
<CustomField>
    <fullName>EppraisalValuation_hz__c</fullName>
    <label>Eppraisal Valuation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>