force-app/main/default/objects/Inquiry_hz__c/fields/EstatedValuation_hz__c.field-meta.xml
<CustomField>
    <fullName>EstatedValuation_hz__c</fullName>
    <label>Estated Valuation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>