force-app/main/default/objects/Inquiry_hz__c/fields/EstimatedHomeValue_hz__c.field-meta.xml
<CustomField>
    <fullName>EstimatedHomeValue_hz__c</fullName>
    <label>Estimated Home Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>