force-app/main/default/objects/Inquiry_hz__c/fields/Finance__c.field-meta.xml
<CustomField>
    <fullName>Finance__c</fullName>
    <label>Finance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mortgage</fullName>
            </value>
            <value>
                <fullName>Cash</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>