force-app/main/default/objects/Inquiry_hz__c/fields/Fireplace_hz__c.field-meta.xml
<CustomField>
    <fullName>Fireplace_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fireplace</label>
    <type>Checkbox</type>
</CustomField>