force-app/main/default/objects/Inquiry_hz__c/fields/Floor_max__c.field-meta.xml
<CustomField>
    <fullName>Floor_max__c</fullName>
    <label>Floor - max</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>