force-app/main/default/objects/Inquiry_hz__c/fields/Floor_min__c.field-meta.xml
<CustomField>
    <fullName>Floor_min__c</fullName>
    <label>Floor - min</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>