force-app/main/default/objects/Inquiry_hz__c/fields/FlooringType__c.field-meta.xml
<CustomField>
    <fullName>FlooringType__c</fullName>
    <label>Flooring Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>