force-app/main/default/objects/Inquiry_hz__c/fields/FullBathrooms_hz_min__c.field-meta.xml
<CustomField>
    <fullName>FullBathrooms_hz_min__c</fullName>
    <label>Bathrooms - min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>