force-app/main/default/objects/Inquiry_hz__c/fields/Furnished_hz__c.field-meta.xml
<CustomField>
    <fullName>Furnished_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Furnished</label>
    <type>Checkbox</type>
</CustomField>