force-app/main/default/objects/Inquiry_hz__c/fields/GarageSpaceMax__c.field-meta.xml
<CustomField>
    <fullName>GarageSpaceMax__c</fullName>
    <label>Garage Space Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>