force-app/main/default/objects/Inquiry_hz__c/fields/GarageSpaceMin__c.field-meta.xml
<CustomField>
    <fullName>GarageSpaceMin__c</fullName>
    <label>Garage Space Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>