force-app/main/default/objects/Inquiry_hz__c/fields/HeatType__c.field-meta.xml
<CustomField>
    <fullName>HeatType__c</fullName>
    <label>Heat Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>