force-app/main/default/objects/Inquiry_hz__c/fields/Historic__c.field-meta.xml
<CustomField>
    <fullName>Historic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Historic</label>
    <type>Checkbox</type>
</CustomField>