force-app/main/default/objects/Inquiry_hz__c/fields/HOAFeesMax__c.field-meta.xml
<CustomField>
    <fullName>HOAFeesMax__c</fullName>
    <label>HOA Fees Max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>