force-app/main/default/objects/Inquiry_hz__c/fields/HOAFeesMin__c.field-meta.xml
<CustomField>
    <fullName>HOAFeesMin__c</fullName>
    <label>HOA Fees Min</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>