force-app/main/default/objects/Inquiry_hz__c/fields/HomeownerConfirmed_hz__c.field-meta.xml
<CustomField>
    <fullName>HomeownerConfirmed_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Homeowner Confirmed</label>
    <type>Checkbox</type>
</CustomField>