force-app/main/default/objects/Inquiry_hz__c/fields/HouseholdMembers_hz__c.field-meta.xml
<CustomField>
    <fullName>HouseholdMembers_hz__c</fullName>
    <label>Household Members</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>