force-app/main/default/objects/Inquiry_hz__c/fields/IncludesAllChanges_hz__c.field-meta.xml
<CustomField>
    <fullName>IncludesAllChanges_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Saved Search Includes All Changes</inlineHelpText>
    <label>Includes All Changes</label>
    <type>Checkbox</type>
</CustomField>