force-app/main/default/objects/Inquiry_hz__c/fields/IncludesNewListings_hz__c.field-meta.xml
<CustomField>
    <fullName>IncludesNewListings_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Saved Search Includes New Listings</inlineHelpText>
    <label>Includes New Listings</label>
    <type>Checkbox</type>
</CustomField>