force-app/main/default/objects/Inquiry_hz__c/fields/IncludesOpenHouseChanges_hz__c.field-meta.xml
<CustomField>
    <fullName>IncludesOpenHouseChanges_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Saved Search Includes Open House Changes</inlineHelpText>
    <label>Includes Open House Changes</label>
    <type>Checkbox</type>
</CustomField>