force-app/main/default/objects/Inquiry_hz__c/fields/IncludesPriceChanges_hz__c.field-meta.xml
<CustomField>
    <fullName>IncludesPriceChanges_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Saved Search Includes Price Changes</inlineHelpText>
    <label>Includes Price Changes</label>
    <type>Checkbox</type>
</CustomField>