force-app/main/default/objects/Inquiry_hz__c/fields/IncludesStatusChanges_hz__c.field-meta.xml
<CustomField>
    <fullName>IncludesStatusChanges_hz__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Saved Search Includes Status Changes</inlineHelpText>
    <label>Includes Status Changes</label>
    <type>Checkbox</type>
</CustomField>