force-app/main/default/objects/Inquiry_hz__c/fields/Inquiry_Contact_Name_and_Type__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Contact_Name_and_Type__c</fullName>
    <formula>Contact_Name__c + &quot;-&quot; +  TEXT(ListingType__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DBk Inquiry Contact Name and Type</label>
    <type>Text</type>
</CustomField>