force-app/main/default/objects/Inquiry_hz__c/fields/Inquiry_Updated_From_URL__c.field-meta.xml
<CustomField>
    <fullName>Inquiry_Updated_From_URL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inquiry Updated From URL?</label>
    <type>Checkbox</type>
</CustomField>