force-app/main/default/objects/Inquiry_hz__c/fields/Invester__c.field-meta.xml
<CustomField>
    <fullName>Invester__c</fullName>
    <label>Invester</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>