force-app/main/default/objects/Inquiry_hz__c/fields/Is_Developer__c.field-meta.xml
<CustomField>
    <fullName>Is_Developer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box if the person is interested in development opportunities</inlineHelpText>
    <label>Is Developer</label>
    <type>Checkbox</type>
</CustomField>