force-app/main/default/objects/Inquiry_hz__c/fields/Is_Investor__c.field-meta.xml
<CustomField>
    <fullName>Is_Investor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Investor</label>
    <type>Checkbox</type>
</CustomField>