force-app/main/default/objects/Inquiry_hz__c/fields/IsWebsiteSavedSearch__c.field-meta.xml
<CustomField>
    <fullName>IsWebsiteSavedSearch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Website Saved Search</label>
    <type>Checkbox</type>
</CustomField>