force-app/main/default/objects/Inquiry_hz__c/fields/Keywords_hz__c.field-meta.xml
<CustomField>
    <fullName>Keywords_hz__c</fullName>
    <label>Keywords</label>
    <length>255</length>
    <type>Text</type>
</CustomField>