force-app/main/default/objects/Inquiry_hz__c/fields/Last_Booked_Viewing__c.field-meta.xml
<CustomField>
    <fullName>Last_Booked_Viewing__c</fullName>
    <label>Last Booked Viewing</label>
    <type>Date</type>
</CustomField>