force-app/main/default/objects/Inquiry_hz__c/fields/Last_Chatter_Added__c.field-meta.xml
<CustomField>
    <fullName>Last_Chatter_Added__c</fullName>
    <label>Last Chatter Added</label>
    <type>DateTime</type>
</CustomField>