force-app/main/default/objects/Inquiry_hz__c/fields/Last_Note_Added_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Note_Added_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Note Added By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Inquiries1</relationshipName>
    <type>Lookup</type>
</CustomField>