force-app/main/default/objects/Inquiry_hz__c/fields/Last_Note_Added_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Note_Added_Date__c</fullName>
    <label>Last Note Added Date</label>
    <type>Date</type>
</CustomField>