force-app/main/default/objects/Inquiry_hz__c/fields/Lead_Source__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source__c</fullName>
    <label>Lead Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Rightmove</fullName>
            </value>
            <value>
                <fullName>Zoopla</fullName>
            </value>
            <value>
                <fullName>Friend/Family</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Website Inquiry Form</fullName>
            </value>
            <value>
                <fullName>OneDome</fullName>
            </value>
            <value>
                <fullName>Board</fullName>
            </value>
            <value>
                <fullName>Power Preview Email</fullName>
            </value>
            <value>
                <fullName>Past Client</fullName>
            </value>
            <value>
                <fullName>Uploaded List</fullName>
            </value>
            <value>
                <fullName>Current Client</fullName>
            </value>
            <value>
                <fullName>UK Land &amp; Farms</fullName>
            </value>
            <value>
                <fullName>New Homes</fullName>
            </value>
            <value>
                <fullName>Prime Location</fullName>
            </value>
            <value>
                <fullName>HLTC</fullName>
            </value>
            <value>
                <fullName>Property Webmasters</fullName>
            </value>
            <value>
                <fullName>Residential People</fullName>
            </value>
            <value>
                <fullName>The Guild Referral</fullName>
            </value>
            <value>
                <fullName>Homesearch Letter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>