force-app/main/default/objects/Inquiry_hz__c/fields/LeadName__c.field-meta.xml
<CustomField>
    <fullName>LeadName__c</fullName>
    <label>Name Of The Associated Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>