force-app/main/default/objects/Inquiry_hz__c/fields/LengthOfResidenceInHome_hz__c.field-meta.xml
<CustomField>
    <fullName>LengthOfResidenceInHome_hz__c</fullName>
    <label>Length of Residence in Home (months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>