force-app/main/default/objects/Inquiry_hz__c/fields/Linked_Listing__c.field-meta.xml
<CustomField>
    <fullName>Linked_Listing__c</fullName>
    <formula>Total_Linked_Listing__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Linked Listing</label>
    <type>Checkbox</type>
</CustomField>