force-app/main/default/objects/Inquiry_hz__c/fields/Listing__c.field-meta.xml
<CustomField>
    <fullName>Listing__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Listing</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Listing_hz__c.PropertyOwnerContact__c</field>
            <operation>equals</operation>
            <valueField>$Source.Contact__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Listing_hz__c</referenceTo>
    <relationshipLabel>Inquiries</relationshipLabel>
    <relationshipName>Inquiries</relationshipName>
    <type>Lookup</type>
</CustomField>